# flask-codegen

./: .gitignore  README.md  app.py  pyproject.toml
flask_codegen/: __main__.py  codegenerator.py  util.py
